# youtube-chapter-splitter

./: .gitignore  CHANGELOG.md  CHANGELOG_0.2.1.md  CHANGELOG_0.2.2.md  CHANGELOG_0.2.3.md  CHANGELOG_0.2.4.md  CHANGELOG_0.2.5.md  CHANGELOG_0.2.6.md  CHANGELOG_IMPROVEMENTS.md  CLAUDE.md  COOKIES_SETUP.md  COVER_ART_SOLUTION.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES_0.10.4.md  RELEASE_NOTES_0.10.5.md  RELEASE_NOTES_0.10.6.md  RELEASE_NOTES_0.10.7.md  RELEASE_NOTES_0.10.8.md  RELEASE_NOTES_0.11.0.md  RELEASE_NOTES_0.12.0.md  RELEASE_NOTES_0.13.0.md
.github/workflows/: README.md  ci.yml  release.yml
_bmad-output/analysis/: brainstorming-session-2026-01-20.md
_bmad-output/planning-artifacts/: bmm-workflow-status.yaml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
benches/: performance_benchmarks.rs
docs/: architecture.md  component-inventory.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
docs/plans/: 2026-02-15-v0.15.1-implementation.md  2026-02-15-v0.15.1-ui-and-filename-tests-design.md
examples/: basic_usage.rs  chapters_example.json
src/: audio.rs  chapter_refinement.rs  chapters.rs  chapters_from_description.rs  config.rs  cookie_helper.rs  downloader.rs  error.rs  error_handler.rs  gui.rs  lib.rs  main.rs  playlist.rs  progress.rs  temp_file.rs  ui.rs  utils.rs  yt_dlp_progress.rs  yt_dlp_update.rs  ytdlp_error_parser.rs  ytdlp_helper.rs
src/dependency/: detect.rs  install.rs  mod.rs
src/tui/: app.rs  download_manager.rs  events.rs  layout.rs  mod.rs  presenter.rs  ui.rs
src/tui/components/: box_chars.rs  input.rs  keyboard.rs  list.rs  mod.rs  modal.rs  progress.rs  spinner.rs  style.rs
src/tui/screens/: download.rs  help.rs  mod.rs  playlist.rs  progress.rs  settings.rs  summary.rs  welcome.rs
tests/: test_audio_functions.rs  test_audio_split_atomicity.rs  test_audio_tags.rs  test_chapters.rs  test_chapters_numbered_format.rs  test_config_options.rs  test_config_validation.rs  test_dependency.rs  test_downloader.rs  test_downloader_functions.rs  test_edge_cases_advanced.rs  test_error.rs  test_filename_sanitization.rs  test_integration_e2e.rs  test_main.rs  test_playlist.rs  test_refactored_helpers.rs  test_stdin_handling.rs  test_tui.rs  test_url_validation.rs  test_utils_edge_cases.rs
