[package]
name = "youtube_chapter_splitter"
version = "0.10.3"
edition = "2021"
authors = ["YouTube Chapter Splitter Contributors"]
description = "Download YouTube videos, extract audio to MP3, and split by chapters"
license = "MIT"
repository = "https://github.com/all3f0r1/youtube-chapter-splitter"
keywords = ["youtube", "audio", "mp3", "chapters", "downloader"]
categories = ["command-line-utilities", "multimedia::audio"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
colored = "2.1"
ureq = { version = "2.10", features = ["json"] }
dirs = "5.0"
once_cell = "1.19"
lofty = "0.22"
toml = "0.8"
indicatif = "0.17"
shellexpand = "3.1"
term_size = "0.3"

[[bin]]
name = "ytcs"
path = "src/main.rs"

[lib]
name = "youtube_chapter_splitter"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "performance_benchmarks"
harness = false
