[package]
name = "youtube_chapter_splitter"
version = "0.15.1"
edition = "2024"
rust-version = "1.93"
authors = ["YouTube Chapter Splitter Contributors"]
description = "Download YouTube videos, extract audio to MP3, and split by chapters with automatic metadata tagging"
license = "MIT"
repository = "https://github.com/all3f0r1/youtube-chapter-splitter"
homepage = "https://github.com/all3f0r1/youtube-chapter-splitter"
documentation = "https://github.com/all3f0r1/youtube-chapter-splitter#readme"
keywords = ["youtube", "audio", "mp3", "chapters", "downloader"]
categories = ["command-line-utilities", "multimedia::audio"]
readme = "README.md"
exclude = [
    "tests/fixtures/*",
    ".github/*",
    "*.md",
    "!README.md",
    "!CHANGELOG.md",
]

[features]
default = []
tui = ["ratatui", "crossterm"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
colored = "2.1"
ureq = { version = "2.10", features = ["json"] }
dirs = "5.0"
once_cell = "1.19"
lofty = "0.22"
toml = "0.8"
indicatif = "0.17"
shellexpand = "3.1"
term_size = "0.3"
log = "0.4"
env_logger = "0.11"
time = "0.3"

# TUI dependencies (optional, enabled by default when building with TUI support)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[[bin]]
name = "ytcs"
path = "src/main.rs"

[lib]
name = "youtube_chapter_splitter"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.14"

[[bench]]
name = "performance_benchmarks"
harness = false
